--- a/source/about/about.css
+++ b/source/about/about.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 
 /*
     We start with a good ol' reset.
@@ -33,20 +33,24 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
     display: block;
 }
+
 body {
     line-height: 1;
 }
+
 ol, ul {
     list-style: none;
 }
+
 blockquote, q {
     quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
-}
+
+    blockquote:before, blockquote:after,
+    q:before, q:after {
+        content: '';
+        content: none;
+    }
 
 table {
     border-collapse: collapse;
@@ -63,21 +67,25 @@ table {
 body {
     font-family: 'PT Sans', sans-serif;
     min-height: 740px;
-
     background: rgb(215, 215, 215);
     background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 500, from(rgb(240, 240, 240)), to(rgb(190, 190, 190)));
     background: -webkit-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
-    background:    -moz-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
-    background:     -ms-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
-    background:      -o-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
-    background:         radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
+    background: -moz-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
+    background: -ms-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
+    background: -o-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
+    background: radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
 }
 
 /*
     Now let's bring some text styles back ...
 */
-b, strong { font-weight: bold }
-i, em { font-style: italic }
+b, strong {
+    font-weight: bold;
+}
+
+i, em {
+    font-style: italic;
+}
 
 /*
     ... and give links a nice look.
@@ -89,19 +97,18 @@ a {
     background: rgba(255,255,255,0.5);
     text-shadow: -1px -1px 2px rgba(100,100,100,0.9);
     border-radius: 0.2em;
-
     -webkit-transition: 0.5s;
-    -moz-transition:    0.5s;
-    -ms-transition:     0.5s;
-    -o-transition:      0.5s;
-    transition:         0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
 }
 
-a:hover,
-a:focus {
-    background: rgba(255,255,255,1);
-    text-shadow: -1px -1px 2px rgba(100,100,100,0.5);
-}
+    a:hover,
+    a:focus {
+        background: rgba(255,255,255,1);
+        text-shadow: -1px -1px 2px rgba(100,100,100,0.5);
+    }
 
 /*
     Because the main point behind the impress.js demo is to demo impress.js
@@ -118,19 +125,17 @@ a:focus {
 .fallback-message {
     font-family: sans-serif;
     line-height: 1.3;
-
     width: 780px;
     padding: 10px 10px 0;
     margin: 20px auto;
-
     border: 1px solid #E4C652;
     border-radius: 10px;
     background: #EEDC94;
 }
 
-.fallback-message p {
-    margin-bottom: 10px;
-}
+    .fallback-message p {
+        margin-bottom: 10px;
+    }
 
 .impress-supported .fallback-message {
     display: none;
@@ -147,13 +152,11 @@ a:focus {
     width: 900px;
     padding: 40px;
     margin: 20px auto;
-
     -webkit-box-sizing: border-box;
-    -moz-box-sizing:    border-box;
-    -ms-box-sizing:     border-box;
-    -o-box-sizing:      border-box;
-    box-sizing:         border-box;
-
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    box-sizing: border-box;
     font-family: 'PT Serif', georgia, serif;
     font-size: 48px;
     line-height: 1.5;
@@ -167,15 +170,16 @@ a:focus {
 .impress-enabled .step {
     margin: 0;
     opacity: 0.3;
-
     -webkit-transition: opacity 1s;
-    -moz-transition:    opacity 1s;
-    -ms-transition:     opacity 1s;
-    -o-transition:      opacity 1s;
-    transition:         opacity 1s;
+    -moz-transition: opacity 1s;
+    -ms-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
 }
 
-.impress-enabled .step.active { opacity: 1 }
+    .impress-enabled .step.active {
+        opacity: 1;
+    }
 
 /*
     These 'slide' step styles were heavily inspired by HTML5 Slides:
@@ -187,36 +191,31 @@ a:focus {
 */
 .slide {
     display: block;
-
     width: 900px;
     height: 700px;
     padding: 40px 60px;
-
     background-color: white;
     border: 1px solid rgba(0, 0, 0, .3);
     border-radius: 10px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, .1);
-
     color: rgb(102, 102, 102);
     text-shadow: 0 2px 2px rgba(0, 0, 0, .1);
-
     font-family: 'Open Sans', Arial, sans-serif;
     font-size: 30px;
     line-height: 36px;
     letter-spacing: -1px;
 }
 
-.slide q {
-    display: block;
-    font-size: 50px;
-    line-height: 72px;
+    .slide q {
+        display: block;
+        font-size: 50px;
+        line-height: 72px;
+        margin-top: 100px;
+    }
 
-    margin-top: 100px;
-}
-
-.slide q strong {
-    white-space: nowrap;
-}
+        .slide q strong {
+            white-space: nowrap;
+        }
 
 /*
     And now we start to style each step separately.
@@ -233,32 +232,30 @@ a:focus {
     padding: 0;
 }
 
-#title .try {
-    font-size: 64px;
-    position: absolute;
-    top: -0.5em;
-    left: 1.5em;
+    #title .try {
+        font-size: 64px;
+        position: absolute;
+        top: -0.5em;
+        left: 1.5em;
+        -webkit-transform: translateZ(20px);
+        -moz-transform: translateZ(20px);
+        -ms-transform: translateZ(20px);
+        -o-transform: translateZ(20px);
+        transform: translateZ(20px);
+    }
 
-    -webkit-transform: translateZ(20px);
-    -moz-transform:    translateZ(20px);
-    -ms-transform:     translateZ(20px);
-    -o-transform:      translateZ(20px);
-    transform:         translateZ(20px);
-}
+    #title h1 {
+        font-size: 190px;
+        -webkit-transform: translateZ(50px);
+        -moz-transform: translateZ(50px);
+        -ms-transform: translateZ(50px);
+        -o-transform: translateZ(50px);
+        transform: translateZ(50px);
+    }
 
-#title h1 {
-    font-size: 190px;
-
-    -webkit-transform: translateZ(50px);
-    -moz-transform:    translateZ(50px);
-    -ms-transform:     translateZ(50px);
-    -o-transform:      translateZ(50px);
-    transform:         translateZ(50px);
-}
-
-#title .footnote {
-    font-size: 32px;
-}
+    #title .footnote {
+        font-size: 32px;
+    }
 
 /*
     Second step is nothing special, just a text with a link, so it doesn't need
@@ -268,19 +265,162 @@ a:focus {
 */
 
 #welcome {
-    width: 600px;
+    width: 700px;
     text-align: center;
     font-size: 60px;
     line-height: 1;
 }
 
-#welcome .blogname {
-    font-size: 80px;
+    #welcome .blogcome {
+        letter-spacing: 10px;
+        font-family: 'Open Sans', Arial, sans-serif;
+    }
+
+    #welcome .blogname {
+        font-size: 80px;
+        line-height: 1;
+    }
+
+    #welcome .blognote {
+        font-size: 20px;
+    }
+
+#verse {
+    display: block;
+    width: 700px;
+    height: 550px;
+    padding: 80px 60px;
+    text-align: center;
+    margin-top: -25px;
     line-height: 1;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, .3);
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, .1);
+    color: rgb(102, 102, 102);
+    text-shadow: 0 2px 2px rgba(0, 0, 0, .1);
+    font-size: 50px;
+    letter-spacing: 3px;
 }
 
-#welcome .blognote {
-    font-size: 20px;
+#become {
+    display: block;
+    width: 700px;
+    height: 550px;
+    padding: 110px 30px;
+    text-align: center;
+    margin-top: -40px;
+    line-height: 1;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, .3);
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, .1);
+    color: rgb(102, 102, 102);
+    text-shadow: 0 2px 2px rgba(0, 0, 0, .1);
+    font-size: 30px;
+    letter-spacing: 3px;
+}
+
+    #become .minewish {
+        font-size: 33px;
+    }
+
+#wisdom {
+    display: block;
+    width: 700px;
+    height: 550px;
+    padding: 35px 60px;
+    text-align: center;
+    margin-top: -55px;
+    line-height: 1;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, .3);
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, .1);
+    color: rgb(102, 102, 102);
+    text-shadow: 0 2px 2px rgba(0, 0, 0, .1);
+    font-size: 50px;
+    letter-spacing: 3px;
+}
+
+#simple {
+    width: 700px;
+    height: 550px;
+    margin: 0 auto;
+    font-size: 60px;
+    text-align: center;
+    margin-top: -60px;
+    line-height: 1;
+    letter-spacing: 10px;
+}
+
+#nature {
+    width: 700px;
+    height: 550px;
+    margin: 0 auto;
+    font-size: 60px;
+    text-align: center;
+    margin-top: -70px;
+    line-height: 1;
+    letter-spacing: 10px;
+}
+
+#wordle {
+    display: block;
+    width: 700px;
+    height: 550px;
+    padding: 20px 30px;
+    text-align: center;
+    margin-top: -105px;
+    line-height: 1;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, .3);
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, .1);
+    color: rgb(102, 102, 102);
+    text-shadow: 0 2px 2px rgba(0, 0, 0, .1);
+    font-size: 30px;
+    letter-spacing: 3px;
+}
+
+    #wordle img {
+        margin-top: -15px;
+    }
+
+#source {
+    display: block;
+    width: 700px;
+    height: 550px;
+    padding: 30px 30px;
+    text-align: center;
+    margin-top: -120px;
+    line-height: 1;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, .3);
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, .1);
+    color: rgb(102, 102, 102);
+    text-shadow: 0 2px 2px rgba(0, 0, 0, .1);
+    font-size: 30px;
+    letter-spacing: 3px;
+}
+
+#contact {
+    display: block;
+    width: 700px;
+    height: 550px;
+    padding: 60px 60px;
+    text-align: center;
+    margin-top: -135px;
+    line-height: 1;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, .3);
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, .1);
+    color: rgb(102, 102, 102);
+    text-shadow: 0 2px 2px rgba(0, 0, 0, .1);
+    font-size: 30px;
+    letter-spacing: 3px;
 }
 
 /*
@@ -289,7 +429,9 @@ a:focus {
     to be able to click on other steps.
 
 */
-#overview { display: none }
+#overview {
+    display: none;
+}
 
 /*
     We also make other steps visible and give them a pointer cursor using the
@@ -349,38 +491,31 @@ a:focus {
         impress.js, as they will have a linear scrollable view ...
     */
     display: none;
-
     /*
         ... and give it some fixed position and nice styles.
     */
     position: fixed;
     left: 0;
     right: 0;
-    bottom: 180px;
+    bottom: 150px;
     line-height: 30px;
-
     background: rgba(0,0,0,0.5);
     color: #EEE;
     text-align: center;
-
     font-size: 50px;
-
     z-index: 100;
-
     /*
         By default we don't want the hint to be visible, so we make it transparent ...
     */
     opacity: 0;
-
     /*
         ... and position it below the bottom of the screen (relative to it's fixed position)
     */
     -webkit-transform: translateY(400px);
-    -moz-transform:    translateY(400px);
-    -ms-transform:     translateY(400px);
-    -o-transform:      translateY(400px);
-    transform:         translateY(400px);
-
+    -moz-transform: translateY(400px);
+    -ms-transform: translateY(400px);
+    -o-transform: translateY(400px);
+    transform: translateY(400px);
     /*
         Now let's imagine that the hint is visible and we want to fade it out and move out
         of the screen.
@@ -392,16 +527,18 @@ a:focus {
         This way user will not see the hint moving down.
     */
     -webkit-transition: opacity 1s, -webkit-transform 0.5s 1s;
-    -moz-transition:    opacity 1s,    -moz-transform 0.5s 1s;
-    -ms-transition:     opacity 1s,     -ms-transform 0.5s 1s;
-    -o-transition:      opacity 1s,      -o-transform 0.5s 1s;
-    transition:         opacity 1s,         transform 0.5s 1s;
+    -moz-transition: opacity 1s, -moz-transform 0.5s 1s;
+    -ms-transition: opacity 1s, -ms-transform 0.5s 1s;
+    -o-transition: opacity 1s, -o-transform 0.5s 1s;
+    transition: opacity 1s, transform 0.5s 1s;
 }
 
 /*
     Now we 'enable' the hint when presentation is initialized ...
 */
-.impress-enabled .hint { display: block }
+.impress-enabled .hint {
+    display: block;
+}
 
 /*
     ... and we will show it when the first step (with id 'welcome') is active.
@@ -412,13 +549,11 @@ a:focus {
         position.
     */
     opacity: 1;
-
     -webkit-transform: translateY(0px);
-    -moz-transform:    translateY(0px);
-    -ms-transform:     translateY(0px);
-    -o-transform:      translateY(0px);
-    transform:         translateY(0px);
-
+    -moz-transform: translateY(0px);
+    -ms-transform: translateY(0px);
+    -o-transform: translateY(0px);
+    transform: translateY(0px);
     /*
         Now for fade in transition we have the oposite situation from the one
         above.
@@ -428,10 +563,10 @@ a:focus {
         transition.
     */
     -webkit-transition: opacity 1s 2s, -webkit-transform 0.5s 2s;
-    -moz-transition:    opacity 1s 2s,    -moz-transform 0.5s 2s;
-    -ms-transition:     opacity 1s 2s,     -ms-transform 0.5s 2s;
-    -o-transition:      opacity 1s 2s,      -o-transform 0.5s 2s;
-    transition:         opacity 1s 2s,         transform 0.5s 2s;
+    -moz-transition: opacity 1s 2s, -moz-transform 0.5s 2s;
+    -ms-transition: opacity 1s 2s, -ms-transform 0.5s 2s;
+    -o-transition: opacity 1s 2s, -o-transform 0.5s 2s;
+    transition: opacity 1s 2s, transform 0.5s 2s;
 }
 
 /*
@@ -455,5 +590,10 @@ a:focus {
 
     So use it wisely ... or don't use at all.
 */
-.impress-enabled          { pointer-events: none }
-.impress-enabled #impress { pointer-events: auto }
+.impress-enabled {
+    pointer-events: none;
+}
+
+    .impress-enabled #impress {
+        pointer-events: auto;
+    }
